--- a/pom.xml
+++ b/pom.xml
@@ -149,5 +149,7 @@
 		<tapestry.version>5.3.6</tapestry.version>
 		<servlet.version>2.5</servlet.version>
 		<jetty.version>7.6.17.v20150415</jetty.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
 </project>
