--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,10 @@
 language: java
+
+jdk:
+- oraclejdk8
+
+env:
+- CI=true
+
 after_success:
-  - mvn clean test jacoco:report coveralls:report
+- ./gradlew jacocoTestReport coveralls
