--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,59 @@
-apply plugin: 'java'
-apply plugin: 'maven'
+plugins {
+	id 'java'
+	id 'jacoco'
+	id 'maven-publish'
+	id 'com.github.kt3k.coveralls' version '2.6.3'
+	id 'com.jfrog.bintray' version '1.7'
+	id 'nebula.javadoc-jar' version '4.4.4'
+	id 'nebula.source-jar' version '4.4.4'
+}
 
 group = 'org.lazan'
 version = '0.0.3-SNAPSHOT'
 description = "tapestry-offline"
 
-sourceCompatibility = 1.6
-targetCompatibility = 1.6
-
 repositories {
-     maven { url "http://repo.maven.apache.org/maven2" }
+     mavenCentral()
 }
+
 dependencies {
     compile group: 'org.apache.tapestry', name: 'tapestry-core', version:'5.4.1'
     compileOnly group: 'javax.servlet', name: 'servlet-api', version:'2.5'
     testCompile group: 'junit', name: 'junit', version:'4.4'
     testCompile group: 'org.eclipse.jetty', name: 'jetty-webapp', version:'7.6.17.v20150415'
+}
+
+jacocoTestReport {
+	reports {
+		xml.enabled = true
+		html.enabled = true
+	}
+}
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            from components.java
+        }
+    }
+}
+
+bintray {
+    user = project.properties['bintrayUser']
+    key = project.properties['bintrayKey']
+	publications = ['maven', 'nebula']
+	publish = false
+	pkg {
+		repo = 'maven'
+		name = project.name
+		licenses = ['Apache-2.0']
+		vcsUrl = 'https://github.com/uklance/tapestry-offline.git'
+		githubRepo = 'uklance/tapestry-offline'
+		labels = ['tapestry', 'offline', 'request']
+		version {
+			name = project.version
+			released = new Date()
+			desc = "Tapestry Offline ${project.version}"
+		}
+	}
 }
